--- a/snake/snake.csproj
+++ b/snake/snake.csproj
@@ -47,11 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\App.cs" />
+    <Compile Include="Core\ControlManager.cs" />
     <Compile Include="Core\Start.cs" />
     <Compile Include="Data\DefaultData.cs" />
     <Compile Include="Core\Draw.cs" />
     <Compile Include="Core\Refresh\Refresh.cs" />
     <Compile Include="Data\ElementManager.cs" />
+    <Compile Include="Data\Head.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
